# tokio-otp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  TODO.md  flake.nix  justfile  roadmap-v0.1.md  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml
crates/tokio-actor/: Cargo.toml
crates/tokio-actor-derive/: Cargo.toml
crates/tokio-actor-derive/src/: lib.rs
crates/tokio-actor-typed/: Cargo.toml
crates/tokio-actor-typed/src/: actor.rs  binding.rs  builder.rs  context.rs  error.rs  graph.rs  lib.rs
crates/tokio-actor-typed/tests/: typed_graph.rs
crates/tokio-actor/examples/: actor_metrics.rs  actor_tracing.rs  blocking_lifecycle.rs  blocking_limits.rs  blocking_work.rs  builder_validation.rs  envelope_limits.rs  graph_failures.rs  ingress_rebind.rs  mailbox_backpressure.rs  metrics.rs  ref_rebind.rs  send_vs_send_when_ready.rs  send_vs_try_send.rs  supervised_ingress.rs  topology.rs  tracing.rs
crates/tokio-actor/examples/support/: mod.rs
crates/tokio-actor/src/: actor.rs  actor_set.rs  binding.rs  blocking.rs  builder.rs  context.rs  envelope.rs  error.rs  graph.rs  handler.rs  ingress.rs  lib.rs  observability.rs  registry.rs
crates/tokio-actor/tests/: actor_set.rs  blocking.rs  graph.rs  graph_handle.rs  registry.rs  topology.rs  topology_ui.rs
crates/tokio-actor/tests/ui/: README.md
crates/tokio-actor/tests/ui/topology/: double_define.rs  double_define.stderr  generic_struct.rs  non_actor_field.rs  non_actor_field.stderr  tuple_struct.rs  wrong_type_define.rs  wrong_type_define.stderr  zero_fields.rs
crates/tokio-otp/: Cargo.toml
crates/tokio-otp-console/: Cargo.toml
crates/tokio-otp-console/assets/: index.html
crates/tokio-otp-console/examples/: console.rs
crates/tokio-otp-console/src/: lib.rs  server.rs  ws.rs
crates/tokio-otp-console/tests/: smoke.rs
crates/tokio-otp-derive/: Cargo.toml
crates/tokio-otp-derive/src/: lib.rs
crates/tokio-otp/examples/: actor_metrics.rs  actor_tracing.rs  blocking_lifecycle.rs  blocking_work.rs  builder_validation.rs  console.rs  directory.rs  drain_policy.rs  dynamic_actors.rs  graph_failures.rs  individual_actor_policies.rs  json_edge.rs  mailbox_backpressure.rs  ref_rebind.rs  send_vs_try_send.rs  supervised_actors.rs  supervisor_snapshot_trace.rs  topology.rs
crates/tokio-otp/examples/agent_control/: budget.rs  chat.rs  gateway.rs  guard.rs  journal.rs  main.rs  messages.rs  model.rs  router.rs  run.rs  session.rs  telemetry.rs  tool_host.rs
crates/tokio-otp/examples/support/: mod.rs
crates/tokio-otp/examples/trading_engine/: control.rs  health.rs  ledger.rs  main.rs  messages.rs  reconciler.rs  router.rs  telemetry.rs  venue.rs
crates/tokio-otp/src/: builder.rs  codec.rs  error.rs  lib.rs  runtime.rs  supervised_actors.rs  supervised_graph.rs  topology.rs
crates/tokio-otp/src/actor/: binding.rs  builder.rs  context.rs  error.rs  factory.rs  graph.rs  handler.rs  mod.rs  monitor.rs  observability.rs  raw.rs
crates/tokio-otp/tests/: blocking.rs  bounded_call.rs  conflating_mailbox.rs  dynamic_actors.rs  graph.rs  monitors.rs  non_clone_actor_traits.rs  prelude.rs  runtime.rs  startup.rs  step.rs  supervised_actors.rs  timers.rs  topology.rs  topology_ui.rs  watch_restarts_to.rs
crates/tokio-otp/tests/ui/: README.md
crates/tokio-otp/tests/ui/topology/: double_define.rs  double_define.stderr  generic_struct.rs  generic_struct.stderr  incomplete_factories.rs  incomplete_factories.stderr  metadata_duplicate_edge.rs  metadata_duplicate_edge.stderr  metadata_empty_sends_to.rs  metadata_empty_sends_to.stderr  metadata_not_enabled.rs  metadata_not_enabled.stderr  metadata_sends_to_literal.rs  metadata_sends_to_literal.stderr  metadata_unknown_option.rs  metadata_unknown_option.stderr  metadata_unknown_target.rs  metadata_unknown_target.stderr  non_actor_field.rs  non_actor_field.stderr  options_duplicate.rs  options_duplicate.stderr  options_malformed.rs  options_malformed.stderr  options_message_size_unbounded.rs  options_message_size_unbounded.stderr  tuple_struct.rs  tuple_struct.stderr  wrong_factory_return.rs  wrong_factory_return.stderr  wrong_type_define.rs  wrong_type_define.stderr  zero_fields.rs  zero_fields.stderr
crates/tokio-otp/tests/ui/topology-pass/: factories.rs  options.rs  spec_struct_factories.rs
crates/tokio-supervisor/: Cargo.toml
crates/tokio-supervisor/benches/: common_flows.rs
crates/tokio-supervisor/examples/: dynamic_children.rs  metrics.rs  nested_supervisor.rs  one_for_all_pipeline.rs  one_for_one_restart.rs  per_child_restart_intensity.rs  shutdown_with_cancellation_token.rs  subscribe_to_events.rs  subscribe_to_snapshots.rs  tracing.rs
crates/tokio-supervisor/src/: builder.rs  child.rs  context.rs  error.rs  event.rs  handle.rs  lib.rs  monitor.rs  observability.rs  prelude.rs  restart.rs  shutdown.rs  snapshot.rs  strategy.rs  supervisor.rs
crates/tokio-supervisor/tests/: auto_shutdown.rs  builder.rs  dynamic.rs  intensity.rs  nested.rs  one_for_all.rs  one_for_one.rs  panic.rs  prelude.rs  rest_for_one.rs  restart_monitor.rs  (+4 more)
docs/: SPEC_2fe64fe.md  SPEC_todo.md  api-link.css  api-link.js  book.toml
docs/src/: SUMMARY.md  actor-graphs.md  actor-monitors.md  actor-steps.md  actor-timers.md  dynamic-actors.md  getting-started.md  introduction.md  next-steps.md  observability.md  ownership-transitions.md  request-reply.md  supervised-actors.md  supervision.md
examples/: nested_supervisor.rs  one_for_all_pipeline.rs  one_for_one_restart.rs  per_child_restart_intensity.rs  shutdown_with_cancellation_token.rs  subscribe_to_events.rs  subscribe_to_snapshots.rs
nix/: crane-checks.nix
specs/: actor-ref-send-api.md
src/: builder.rs  child.rs  context.rs  error.rs  event.rs  handle.rs  lib.rs  observability.rs  restart.rs  shutdown.rs  snapshot.rs  strategy.rs  supervisor.rs
src/runtime/: child_factory.rs  child_runtime.rs  exit.rs  intensity.rs  mod.rs  shutdown.rs  spawn.rs  supervision.rs
tests/: builder.rs  intensity.rs  nested.rs  one_for_all.rs  one_for_one.rs  panic.rs  shutdown.rs
tests/common/: mod.rs
(+6 files in other folders)
