[package]
name = "tokio-supervisor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Structured task supervision for Tokio"
readme = "README.md"
keywords = ["tokio", "supervisor", "async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
