[workspace]
default-members = [
    "crates/tokio-supervisor",
    "crates/tokio-actor",
    "crates/tokio-actor-derive",
    "crates/tokio-otp",
    "crates/tokio-otp-console",
]
members = [
    "crates/tokio-supervisor",
    "crates/tokio-actor",
    "crates/tokio-actor-derive",
    "crates/tokio-otp",
    "crates/tokio-otp-console",
]
resolver = "3"

[workspace.metadata]
name = "tokio-otp"

[workspace.dependencies]
axum = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = { version = "0.20", features = ["debugging"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"
syn = "2.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-actor = { path = "crates/tokio-actor" }
tokio-actor-derive = { path = "crates/tokio-actor-derive" }
tokio-otp-console = { path = "crates/tokio-otp-console" }
tokio-supervisor = { path = "crates/tokio-supervisor" }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
trybuild = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
