[package]
name = "tokio-actor-derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive macros for tokio-actor"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
# Dev-dependency cycle back to the crate that re-exports this macro; cargo
# permits it, and it lets the doctest below compile against real actor types.
tokio-actor.workspace = true
