[package]
name = "tokio-actor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Static typed actor graphs for Tokio with restart-stable actor refs"
readme = "../../README.md"
keywords = ["tokio", "actor", "async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["derive"]
derive = ["dep:tokio-actor-derive"]
metrics = ["dep:metrics"]

[dependencies]
metrics = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-actor-derive = { workspace = true, optional = true }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
trybuild.workspace = true
