[package]
name = "tokio-otp-console"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Web-based dashboard for tokio-otp supervisor trees"
readme = "../../README.md"
keywords = ["tokio", "supervisor", "console", "dashboard"]
categories = ["asynchronous", "visualization"]

[dependencies]
axum = { workspace = true, features = ["ws"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-supervisor = { workspace = true, features = ["serde"] }
tracing.workspace = true
