[package]
name = "tokio-otp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OTP-style runtime for tokio: supervision trees and typed actor graphs"
readme = "../../README.md"
keywords = ["tokio", "otp", "actor", "supervisor"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["derive"]
console = ["dep:tokio-otp-console"]
derive = ["dep:tokio-otp-derive"]
metrics = ["tokio-supervisor/metrics"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-otp-console = { workspace = true, optional = true }
tokio-otp-derive = { workspace = true, optional = true }
tokio-supervisor.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["signal", "test-util"] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
trybuild.workspace = true

[[example]]
name = "console"
required-features = ["console"]

[[example]]
name = "json_edge"
required-features = ["serde"]
