[package]
name = "tokio-otp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OTP-style runtime for tokio: supervision trees and typed actor graphs"
readme = "../../README.md"
keywords = ["tokio", "otp", "actor", "supervisor"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["derive"]
derive = ["dep:tokio-otp-derive"]
metrics = ["dep:metrics", "tokio-supervisor/metrics"]
serde = ["dep:serde"]

[dependencies]
metrics = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-otp-derive = { workspace = true, optional = true }
tokio-supervisor.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
metrics-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal", "test-util"] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
trybuild.workspace = true

[[example]]
name = "trading_engine"
required-features = ["metrics"]
